# sabi-wallet-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  setup.sh  test-request.json  test-seed.json
.gemini/: instructions.md
breez-service/: README.md  package-lock.json  package.json  server.js
breez-service/breez-service/: package-lock.json
client/: api.ts
migrations/: 20251202120000_create_wallets_table.sql  20251202121000_add_first_channel_fields.sql  20251203120000_add_security_fields.sql
src/: breez.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs
src/models/: wallet.rs
src/routes/: health.rs  mod.rs  wallets.rs
tests/: create_wallet_test.rs
