[package]
name = "sabi-wallet-backend"
version = "0.1.0"
edition = "2021"
description = "Sabi Wallet – Nodeless Lightning (Spark) + Nostr backend for Nigeria"
license = "MIT"
repository = "https://github.com/auwalrg8/sabi-wallet-backend.git"
publish = false

[dependencies]
axum = { version = "0.7.5", features = ["ws", "macros", "tokio"] }
tokio = { version = "1.40", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5.2", features = ["trace", "cors", "timeout"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json", "fmt"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1.10", features = ["v7", "serde", "fast-rng"] }
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate"] }
chrono = { version = "0.4.38", features = ["serde"] }
nostr-sdk = "0.32.0"
thiserror = "1.0.65"
anyhow = "1.0.89"
once_cell = "1.19.0"
config = "0.14.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
hex = "0.4.3"
futures = "0.3.30"
redis = { version = "0.27.2", features = ["tokio-comp", "connection-manager"], optional = true }
home = "=0.5.11"
base64ct = "=1.6.0"
bip39 = { version = "2.0", features = ["rand"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
default = []
redis = ["dep:redis"]

